--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,7 @@ h1{
 
 #indexbody {
     background-image: url('mainpage.png');
-    background-position: center;
+    background-size: cover;
     margin: 0; /* Remove default margin */
     padding: 0; /* Remove default padding */
 }
